@@ -1,5 +1,5 @@
 # Makefile.am -- 
-# Copyright 2004-2008 Red Hat Inc., Durham, North Carolina.
+# Copyright 2004-2009 Red Hat Inc., Durham, North Carolina.
 # All Rights Reserved.
 #
 # This library is free software; you can redistribute it and/or
@@ -43,6 +43,9 @@ BUILT_SOURCES = actiontabs.h errtabs.h fieldtabs.h flagtabs.h \
 if USE_ALPHA
 BUILT_SOURCES += alpha_tables.h
 endif
+if USE_ARMEB
+BUILT_SOURCES += armeb_tables.h
+endif
 noinst_PROGRAMS = gen_actiontabs_h gen_errtabs_h gen_fieldtabs_h \
 	gen_flagtabs_h gen_ftypetabs_h gen_i386_tables_h \
 	gen_ia64_tables_h gen_machinetabs_h gen_msg_typetabs_h \
@@ -50,6 +53,9 @@ noinst_PROGRAMS = gen_actiontabs_h gen_errtabs_h gen_fieldtabs_h \
 	gen_s390x_tables_h gen_x86_64_tables_h
 if USE_ALPHA
 noinst_PROGRAMS += gen_alpha_tables_h
+endif
+if USE_ARMEB
+noinst_PROGRAMS += gen_armeb_tables_h
 endif
 gen_actiontabs_h_SOURCES = gen_tables.c gen_tables.h actiontab.h
 gen_actiontabs_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="actiontab.h"'
@@ -61,6 +67,13 @@ gen_alpha_tables_h_SOURCES = gen_tables.c gen_tables.h alpha_table.h
 gen_alpha_tables_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="alpha_table.h"'
 alpha_tables.h: gen_alpha_tables_h Makefile
 	./gen_alpha_tables_h --lowercase --i2s --s2i alpha_syscall > $@
+endif
+
+if USE_ARMEB
+gen_armeb_tables_h_SOURCES = gen_tables.c gen_tables.h armeb_table.h
+gen_armeb_tables_h_CFLAGS = $(AM_CFLAGS) '-DTABLE_H="armeb_table.h"'
+armeb_tables.h: gen_armeb_tables_h Makefile
+	./gen_armeb_tables_h --lowercase --i2s --s2i armeb_syscall > $@
 endif
 
 gen_errtabs_h_SOURCES = gen_tables.c gen_tables.h errtab.h
